add crud and data model for accounts
