# api/server.go
@@ -12,7 +12,7 @@ func NewServer() *fiber.App {
 	app := fiber.New()
 
 	app.Get("/swagger/*", swagger.HandlerDefault)
-
+	// CUSTOMERS
 	app.Get("/customers", handler.GetAllCustomers)
 	app.Get("/customers/:id", handler.GetCustomerByID)
 	app.Post("/customers", handler.CreateCustomer)
@@ -21,6 +21,12 @@ func NewServer() *fiber.App {
 	app.Patch("/customers/:id", handler.PatchCustomer)
 	app.Get("findcustomers/", handler.SearchCustomerByName)
 	app.Patch("/customers/toggle-status/:id", handler.ToggleCustomerStatus)
+	// ACCOUNTS
+	app.Post("/accounts/", handler.CreateAccount)
+	app.Get("/accounts/", handler.GetAllAccounts)
+	app.Get("/accounts/:id", handler.GetAccountByID)
+	app.Put("accounts/:id", handler.UpdateAccount)
+	app.Delete("/accounts/:id", handler.DeleteAccount)
 
 
 	return app
